Hapus images/.html

--- a/index.html
+++ b/index.html
@@ -282,7 +282,7 @@
     <header>
         <nav class="navbar">
             <div class="logo">
-                <img src="images/logo-atas.png" alt="JURIG UI Logo" class="logo-img">
+                <img src="logo-atas.png" alt="JURIG UI Logo" class="logo-img">
             </div>
             <div class="nav-links">
                 <a href="#home" id="home" aria-label="Go to Home">HOME</a>
@@ -295,9 +295,9 @@
     <!-- Image Slider -->
     <section class="slider-container">
         <div class="slider" id="slider">
-            <img src="images/urig-1.png" alt="Image 1">
-            <img src="images/urig-2.png" alt="Image 2">
-            <img src="images/urig-3.png" alt="Image 3">
+            <img src="urig-1.png" alt="Image 1">
+            <img src="urig-2.png" alt="Image 2">
+            <img src="urig-3.png" alt="Image 3">
         </div>
         <!-- Dot Indicators -->
         <div class="dot-container" id="dotContainer">
@@ -319,31 +319,31 @@
     <section class="faculty-grid">
         <!-- Faculty logos -->
         <div class="faculty-item">
-            <img src="images/makara-vokasi.png" alt="Faculty of Vocational Education Program">  
+            <img src="makara-vokasi.png" alt="Faculty of Vocational Education Program">  
         </div>
         <div class="faculty-item">
-            <img src="images/makara-fkm.png" alt="Faculty of Public Health">
+            <img src="makara-fkm.png" alt="Faculty of Public Health">
         </div>
         <div class="faculty-item">
-            <img src="images/makara-fk.png" alt="Faculty of Medicine">
+            <img src="makara-fk.png" alt="Faculty of Medicine">
         </div>
         <div class="faculty-item">
-            <img src="images/makara-feb.png" alt="Faculty of Economics and Business">
+            <img src="makara-feb.png" alt="Faculty of Economics and Business">
         </div>
         <div class="faculty-item">
-            <img src="images/makara-fasilkom.png" alt="Faculty of Computer Science">
+            <img src="makara-fasilkom.png" alt="Faculty of Computer Science">
         </div>
         <div class="faculty-item">
-            <img src="images/makara-farmasi.png" alt="Faculty of Pharmacy">
+            <img src="makara-farmasi.png" alt="Faculty of Pharmacy">
         </div>
         <div class="faculty-item">
-            <img src="images/makara-ft.png" alt="Faculty of Engineering">
+            <img src="makara-ft.png" alt="Faculty of Engineering">
         </div>
         <div class="faculty-item">
-            <img src="images/makara-fib.png" alt="Faculty of Humanities">
+            <img src="makara-fib.png" alt="Faculty of Humanities">
         </div>
         <div class="faculty-item">
-            <img src="images/makara-ui.png" alt="UI">
+            <img src="makara-ui.png" alt="UI">
         </div>
     </section>
 
