--- a/index.html
+++ b/index.html
@@ -5,278 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>JURIG UI</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
-    <style>
-        * {
-            margin: 0;
-            padding: 0;
-            box-sizing: border-box;
-            font-family: Arial, sans-serif;
-        }
-
-        body {
-            background-color: #1a1a1a;
-            color: white;
-        }
-
-        /* Navigation */
-        .navbar {
-            background: linear-gradient(to right, #d40303, #6e0202); 
-            padding: 1rem;
-            display: flex;
-            justify-content: space-between;
-            align-items: center;
-        }
-
-        .logo {
-            display: flex;
-            align-items: center;
-        }
-
-        .logo-img {
-            height: 50px; /* Sesuaikan ukuran logo sesuai kebutuhan */
-            width: auto; /* Menjaga aspek rasio gambar */
-        }
-
-        .nav-links {
-            display: flex;
-            gap: 2rem;
-            position: relative; /* Required for the underline indicator */
-        }
-
-        .nav-links a {
-            color: white;
-            text-decoration: none;
-            position: relative; /* To allow absolute positioning of the underline */
-            padding-bottom: 5px; /* Space between text and underline */
-        }
-
-        .nav-links a::after {
-            content: '';
-            position: absolute;
-            bottom: 0;
-            left: 0;
-            width: 100%;
-            height: 3px;
-            background-color: rgb(254, 254, 254);
-            transform: scaleX(0);
-            transform-origin: bottom right;
-            transition: transform 0.3s ease-out;
-        }
-
-        .nav-links a.active::after {
-            transform: scaleX(1);
-            transform-origin: bottom left;
-        }
-
-        /* Slider */
-        .slider-container {
-            position: relative;
-            width: 100%;
-            height: 100vh;
-            overflow: hidden;
-            margin-bottom: 2rem;
-        }
-
-        .slider {
-            display: flex;
-            transition: transform 0.5s ease-in-out; 
-            width: 300%;
-        }
-
-        .slider img {
-            width: 100%; 
-            height: 100%; 
-            object-fit: contain;
-        }
-
-        /* Dot Indicators */
-        .dot-container {
-            position: absolute;
-            bottom: 20px;
-            left: 50%;
-            transform: translateX(-50%);
-            display: flex;
-            gap: 1rem;
-        }
-
-        .dot {
-            width: 10px;
-            height: 10px;
-            border-radius: 50%;
-            background-color: rgba(255, 255, 255, 0.5);
-            cursor: pointer;
-            transition: background-color 0.3s ease;
-        }
-
-        .dot.active {
-            background-color: rgb(199, 7, 7);
-        }
-
-        /* Hero Section */
-        .hero {
-            position: relative;
-            height: 400px;
-            background-image: url('/api/placeholder/1200/400');
-            background-size: cover;
-            background-position: center;
-            display: flex;
-            align-items: center;
-            justify-content: center;
-        }
-
-        .hero::before {
-            content: '';
-            position: absolute;
-            top: 0;
-            left: 0;
-            right: 0;
-            bottom: 0;
-            background: rgba(0, 0, 0, 0.5);
-        }
-
-        /* History Section */
-        .history {
-            padding: 2rem;
-            text-align: center;
-        }
-
-        .history h2 {
-            margin-bottom: 1rem;
-        }
-
-        /* Faculty Section */
-        .faculty-grid {
-            display: grid;
-            grid-template-columns: repeat(3, 1fr); /* 3 kolom pada layar besar */
-            gap: 1rem;
-            padding: 2rem;
-            max-width: 1200px;
-            margin: 0 auto;
-        }
-
-        /* Mengatur gambar agar responsif */
-        .faculty-item img {
-         width: 100%;
-         height: 100%;
-         object-fit: cover; /* Agar gambar tetap terjaga proporsinya */
-        }
-
-        .faculty-item {
-            aspect-ratio: 1;
-            background-color: #333;
-            display: flex;
-            align-items: center;
-            justify-content: center;
-            transition: transform 0.3s;
-        }
-
-        .faculty-item:hover {
-            transform: scale(1.05);
-        }
-
-        /* Footer */
-        footer {
-            background: linear-gradient(to right, #d40303, #6e0202);
-            padding: 2rem;
-            text-align: center;
-            margin-top: 2rem;
-        }
-
-        .social-links {
-            margin-top: 1rem;
-            display: flex;
-            justify-content: center;
-            gap: 1rem;
-        }
-
-        .social-links a {
-            color: white;
-            text-decoration: none;
-        }
-
-       /* Footer Paragraphs */
-       .footer-paragraphs {
-            display: flex;
-            justify-content: space-between; /* Default untuk layar besar */
-            gap: 2rem;
-            margin-top: 2rem;
-            text-align: left;
-            max-width: 1200px;
-            margin: 0 auto;
-            padding: 0 10px; /* Memberikan ruang di kiri dan kanan */
-        }
-
-        .footer-paragraphs .left-paragraph,
-        .footer-paragraphs .right-paragraph {
-            width: 48%; /* Membagi lebar 50% untuk masing-masing, beri sedikit ruang */
-            box-sizing: border-box; /* Pastikan padding tidak menambah lebar */
-        }
-
-        .footer-paragraphs p {
-            margin: 0;
-            padding: 0; /* Pastikan tidak ada padding yang menambah lebar */
-            line-height: 1.3; /* Menambah spasi antar baris agar teks lebih nyaman dibaca */
-        }
-
-        footer h3 {
-            margin-bottom: 1.5rem; /* Menambahkan jarak antara 'CONTACT US' dan paragraf di bawahnya */
-        }
-
-
-        /* Responsif pada layar kecil */
-        @media (max-width: 768px) {
-            .slider-container {
-                height: 60vh;
-            }
-
-            .slider img {
-                object-fit: cover;
-            }
-
-            .faculty-grid {
-              grid-template-columns: repeat(2, 1fr);  /* 2 kolom pada layar medium */
-            }
-
-            .footer-paragraphs {
-                flex-direction: column; /* Menyusun paragraf secara vertikal */
-                gap: 1rem;
-                justify-content: center; /* Center-kan isi konten */
-                text-align: center; /* Center-kan teks di dalam paragraf */
-            }
-
-            .footer-paragraphs .left-paragraph,
-            .footer-paragraphs .right-paragraph {
-                width: 100%; /* Full width untuk setiap paragraf pada layar kecil */
-            }
-        }
-
-        @media (min-width: 1024px) {
-            .footer-paragraphs {
-                max-width: 1200px; /* Maksimumkan lebar konten footer pada layar besar */
-                margin: 0 auto; /* Centering footer */
-            }
-
-            .footer-paragraphs p {
-                flex: 0 1 48%; /* Tetap menjaga lebar paragraf pada layar besar */
-                padding-right: 20px; /* Menambahkan sedikit padding kanan pada paragraf kanan */
-            }
-        }
-
-        @media (max-width: 480px) {
-            .slider-container {
-                height: 50vh;
-            }
-
-           .faculty-grid {
-             grid-template-columns: 1fr;  /* 1 kolom pada layar kecil */
-            }
-        }
-
-        /* Fokus pada elemen navigasi */
-        .nav-links a:focus {
-            outline: 2px solid #ffcc00;
-        }
-    </style>
+    <link rel="stylesheet" href="style.css"
 </head>
 <body>
     <header>
