ganti warna tulisan find the jurig

--- a/index.html
+++ b/index.html
@@ -168,7 +168,7 @@
 
         .faculty-item {
             aspect-ratio: 1;
-            background-color: #333;
+            background-color: #000000;
             display: flex;
             align-items: center;
             justify-content: center;
@@ -226,7 +226,7 @@
         }
 
         h1, h2 {
-            color: #333;
+            color: #ffffff;
         }
 
         .comment-form {
@@ -513,7 +513,7 @@
 
 
     <div class="container">
-        <h1>Kolom Komentar dengan Role</h1>
+        <h1>Kolom Komentar</h1>
         <div class="comment-form">
             <input type="text" id="name" placeholder="Nama Anda" required>
             <textarea id="comment" placeholder="Tulis komentar Anda..." required></textarea>
