udah di ubah koment nya
jadi bisa di scroll

--- a/index.html
+++ b/index.html
@@ -218,91 +218,74 @@
         }
 
         /* Comment */
-        body {
-            font-family: Arial, sans-serif;
-            background-color: #f4f4f4;
-            margin: 0;
-            padding: 20px;
-        }
-
-        .container {
-            max-width: 600px;
-            margin: auto;
-            background: white;
-            padding: 20px;
-            border-radius: 8px;
-            box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
-        }
-
-        h1, h2 {
-            color: #ffffff;
-        }
-
-        .comment-form {
-            margin-bottom: 20px;
-        }
-
-        .comment-form input, .comment-form textarea {
-            width: 100%;
-            padding: 10px;
-            margin: 5px 0;
-            border: 1px solid #ccc;
-            border-radius: 4px;
-        }
-
-        .comment-form button {
-            background-color: #9d0000;
-            color: white;
-            border: none;
-            padding: 10px;
-            border-radius: 4px;
-            cursor: pointer;
-        }
-
-        .comment-form button:hover {
-            background-color: #218838;
-        }
-        
-        .delete-button {
-    position: absolute;
-    top: 10px; /* Jarak dari atas */
-    right: 10px; /* Jarak dari kanan */
-    background-color: #dc3545; /* Warna tombol */
-    color: white;
-    border: none;
-    padding: 5px 10px; /* Ukuran tombol */
-    border-radius: 4px;
-    cursor: pointer;
-    z-index: 1; /* Pastikan tombol berada di atas elemen lain */
+        .comments-container {
+      width: 50%;
+      margin: auto;
+      padding: 15px;
+      background-color: #333;
+      border-radius: 10px;
+      box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.5);
     }
 
-    .delete-button:hover {
-    background-color: #c82333; /* Warna saat tombol dihover */
+    .comments-title {
+      text-align: center;
+      font-size: 1.5em;
+      margin-bottom: 10px;
+    }
+
+    .comments-list {
+      max-height: 300px; /* Maksimal tinggi kotak komentar */
+      overflow-y: auto;  /* Tambahkan fitur scroll bila isi melebihi tinggi */
+      padding: 10px;
+      border: 1px solid #555;
+      border-radius: 8px;
+      background-color: #222;
     }
 
     .comment {
-    position: relative; /* Tambahkan ini agar tombol dapat diposisikan relatif terhadap kotak komentar */
-    background: #000000;
-    border-left: 4px solid #007bff;
-    padding: 10px;
-    margin: 10px 0;
-    border-radius: 4px;
-    word-wrap: break-word;
-    word-break: break-word;
-    overflow-wrap: break-word;
-    max-width: 100%; /* Pastikan kotak komentar tetap dalam batas */
+      padding: 10px;
+      margin-bottom: 10px;
+      border-bottom: 1px solid #444;
     }
 
-          
+    .comment:last-child {
+      border-bottom: none;
+    }
 
-        .comment .name {
-            font-weight: bold;
-            color: #007bff;
-        }
+    .comment h4 {
+      margin: 0 0 5px;
+    }
 
-        .comment .text {
-            margin-top: 5px;
-        }
+    .comment p {
+      margin: 0;
+    }
+
+    .add-comment {
+      margin-top: 15px;
+      display: flex;
+      flex-direction: column;
+    }
+
+    .add-comment button {
+      padding: 10px;
+      border: none;
+      border-radius: 8px;
+      background-color: #f00;
+      color: white;
+      cursor: pointer;
+      text-align: center;
+      font-size: 1em;
+      text-decoration: none;
+    }
+
+    .add-comment button:hover {
+      background-color: #c00;
+    }
+
+    .add-comment a {
+      text-decoration: none;
+      color: white;
+    }
 
        /* Gallery */
        body {
@@ -664,100 +647,42 @@
 
 
 
-    <div class="container">
-        <h1>Kolom Komentar</h1>
-        <div class="comment-form">
-            <input type="text" id="name" placeholder="Nama Anda" required>
-            <textarea id="comment" placeholder="Tulis komentar Anda..." required></textarea>
-            <button id="submit">Kirim Komentar</button>
+    <div class="comments-container">
+        <h2 class="comments-title">Comments</h2>
+        <div class="comments-list">
+          <!-- Contoh komentar -->
+          <div class="comment">
+            <h4>FufuFafa <span style="font-size: 0.8em; color: #aaa;">9 years ago</span></h4>
+            <p>Saya waktu berkunjung ke salah satu Fakultas UI, dan tanpa saya sengaja, saya bertemu dengan sosok perempuan berambut panjang.</p>
+          </div>
+          <div class="comment">
+            <h4>Mas Narji <span style="font-size: 0.8em; color: #aaa;">10 hours ago</span></h4>
+            <p>Saya waktu berkunjung di Fakultas Vokasi, saya melihat sosok bayangan putih di air mancur vokasi dan menyanyikan sebuah lagu.</p>
+          </div>
+          <div class="comment">
+            <h4>Andi <span style="font-size: 0.8em; color: #aaa;">2 days ago</span></h4>
+            <p>Waktu malam hari, saya merasa ada sesuatu yang aneh di Fakultas Kedokteran. Apakah benar ada cerita di sana?</p>
+          </div>
+          <div class="comment">
+            <h4>Siti <span style="font-size: 0.8em; color: #aaa;">5 hours ago</span></h4>
+            <p>Saya mendengar cerita dari teman saya, apakah itu hanya mitos?</p>
+          </div>
+          <div class="comment">
+            <h4>Rani <span style="font-size: 0.8em; color: #aaa;">30 minutes ago</span></h4>
+            <p>Saya pernah melihat sosok di Gedung Rektorat! Menyeramkan!</p>
+          </div>
+          <div class="comment">
+            <h4>Jojon <span style="font-size: 0.8em; color: #aaa;">30 minutes ago</span></h4>
+            <p>Saya pernah liat juga, ada gondoruwo di vokasi, gede banget sumpah. Pas itu juga saya ngeliat ada tuyul lagi muter muter buat nyari duit</p>
+          </div>
         </div>
-        <div class="comments-section" id="comments-section">
-            <h2>Komentar:</h2>
+        <div class="add-comment">
+          <!-- Tombol dengan link ke Google Form -->
+          <a href="https://forms.gle/exampleGoogleFormLink" target="_blank">
+            <button>Submit Your Comment</button>
+          </a>
         </div>
-    </div>
-
-    <script>
-        // Role pengguna saat ini (admin atau user)
-        const currentUserRole = 'admin'; // Ubah menjadi 'user' untuk pengujian non-admin
-
-        // Fungsi untuk menyimpan komentar ke localStorage
-        function saveComments(comments) {
-            localStorage.setItem('comments', JSON.stringify(comments));
-        }
-
-        // Fungsi untuk memuat komentar dari localStorage
-        function loadComments() {
-            const savedComments = localStorage.getItem('comments');
-            return savedComments ? JSON.parse(savedComments) : [];
-        }
-
-        // Fungsi untuk menampilkan komentar di layar
-        function displayComments(comments) {
-            const commentsSection = document.getElementById('comments-section');
-            commentsSection.innerHTML = '<h2>Komentar:</h2>'; // Reset konten sebelumnya
-
-            comments.forEach((comment, index) => {
-                const commentDiv = document.createElement('div');
-                commentDiv.classList.add('comment');
-
-                const nameDiv = document.createElement('div');
-                nameDiv.classList.add('name');
-                nameDiv.textContent = comment.name;
-
-                const textDiv = document.createElement('div');
-                textDiv.classList.add('text');
-                textDiv.textContent = comment.text;
-
-                // Tambahkan tombol hapus jika role adalah admin
-                if (currentUserRole === 'admin') {
-                    const deleteButton = document.createElement('button');
-                    deleteButton.classList.add('delete-button');
-                    deleteButton.textContent = 'Hapus';
-                    deleteButton.addEventListener('click', function () {
-                        deleteComment(index);
-                    });
-                    commentDiv.appendChild(deleteButton);
-                }
-
-                commentDiv.appendChild(nameDiv);
-                commentDiv.appendChild(textDiv);
-                commentsSection.appendChild(commentDiv);
-            });
-        }
-
-        // Fungsi untuk menghapus komentar berdasarkan indeks
-        function deleteComment(index) {
-            const comments = loadComments();
-            comments.splice(index, 1); // Hapus komentar pada indeks tertentu
-            saveComments(comments); // Simpan perubahan ke localStorage
-            displayComments(comments); // Tampilkan ulang komentar
-        }
-
-        // Event Listener untuk menambahkan komentar
-        document.getElementById('submit').addEventListener('click', function () {
-            const name = document.getElementById('name').value;
-            const comment = document.getElementById('comment').value;
-
-            if (name && comment) {
-                const comments = loadComments();
-                comments.push({ name, text: comment }); // Tambahkan komentar baru
-                saveComments(comments); // Simpan ke localStorage
-                displayComments(comments); // Tampilkan komentar di layar
-
-                // Kosongkan input
-                document.getElementById('name').value = '';
-                document.getElementById('comment').value = '';
-            } else {
-                alert('Harap isi semua field!');
-            }
-        });
-
-        // Saat halaman dimuat, tampilkan komentar yang sudah tersimpan
-        document.addEventListener('DOMContentLoaded', function () {
-            const comments = loadComments();
-            displayComments(comments);
-        });
-    </script>
+      </div>
 
 <div class="gallery-container" id="gallery"> <!-- Menambahkan id="gallery" -->
     <h2>GALLERY</h2>
