--- a/index.html
+++ b/index.html
@@ -494,7 +494,7 @@
 
 .popup-content .team {
     display: grid;
-    grid-template-columns: repeat(2, 1fr);
+    grid-template-columns: repeat(2, 3fr);
     gap: 1rem;
 }
 
@@ -557,23 +557,23 @@
             <p>Selamat datang di Jurig UI, sebuah platform yang dikelola oleh kami, mahasiswi Universitas Indonesia jurusan Produksi Media. Kami hadir untuk memberikan wadah bagi eksplorasi cerita mistis yang ada di lingkungan kampus kami. Melalui website ini, kami akan mengungkapkan sejarah masa lalu Universitas Indonesia yang kaya dengan kisah-kisah menakutkan dan menarik. Selamat menjelajahi sisi lain dari Universitas Indonesia yang penuh dengan nuansa mistis!</p>
             <div class="team">
                 <div class="team-member">
-                    <img src="images/member1.jpg" alt="Member 1">
+                    <img src="foto-alya.png" alt="Alya Maulidian">
                     <p>Alya Maulidian - Project Manager</p>
                 </div>
                 <div class="team-member">
-                    <img src="images/member2.jpg" alt="Member 2">
-                    <p>Muhammad Yusuf - UI/UX Designer</p>
+                    <img src="foto-yusuf.png" alt="Muhammad Yusuf>
+                 <p>Muhammad Yusuf - UI/UX Designer</p>
                 </div>
                 <div class="team-member">
-                    <img src="images/member3.jpg" alt="Member 3">
+                    <img src="foto-deva.png" alt="Deva Shizuka">
                     <p>Deva Shizuka - Developer</p>
                 </div>
                 <div class="team-member">
-                    <img src="images/member4.jpg" alt="Member 4">
+                    <img src="foto-kai.png" alt="Nasyia Caesaria">
                     <p>Nasyia Caesaria - Developer</p>
                 </div>
                 <div class="team-member">
-                    <img src="images/member5.jpg" alt="Member 5">
+                    <img src="foto-maira.png" alt="Chavali Velma">
                     <p>Chavali Velma - Developer</p>
                 </div>
             </div>
