--- a/index.html
+++ b/index.html
@@ -678,7 +678,7 @@
         </div>
         <div class="add-comment">
           <!-- Tombol dengan link ke Google Form -->
-          <a href="https://forms.gle/exampleGoogleFormLink" target="_blank">
+          <a href="https://bit.ly/JURIGUI" target="_blank">
             <button>Submit Your Comment</button>
           </a>
         </div>
