Update coba coba coba.html

--- a/coba coba coba.html
+++ b/coba coba coba.html
@@ -99,7 +99,7 @@
   <p>Klik salah satu ikon untuk melihat gambar makara dalam ukuran besar.</p>
 
   <section class="faculty-grid">
-    <div class="faculty-item" onclick="showPopup('makara-vokasi-large.png',Gambar pocong FIB.png)">
+    <div class="faculty-item" onclick="showPopup('makara-vokasi-large.png')">
       <img src="makara-vokasi.png" alt="Faculty of Vocational Education Program">
       <p>Fakultas Vokasi</p>
     </div>
